# libsmq

./: .gitignore  .travis.yml  Makefile  Makefile.am  Makefile.in  README.md  TODO  autobuild.sh  config.sh  configure.ac  libsmq.3  mkfile  smq.c  smq.h  smq_test.c
doc/: Makefile.am  libsmq.3  libsmq.texi  version.texi
src/: Makefile.am  smq.c  smq.h
test/: Makefile.am  smq_cunit_test.c  smq_test.c
