AC_PREREQ([2.59])
AC_INIT([libsmq],
        [1.1], 
        [coder@kyleisom.net],
        [libsmq],
        [https://bitbucket.org/kisom/libsmq])
AM_INIT_AUTOMAKE([1.11 foreign])
AM_CONFIG_SRCDIR([src/smq.h])
AM_CHECK_HEADERS
AC_CANONICAL_HOST
AC_CONFIG_FILES([Makefile src/Makefile doc/Makefile])

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_RANLIB
AM_PROG_CC_C_O

AC_OUTPUT
